--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ ext.natsVersion = "2.6.0"
 ext.natsStreamingVersion = "2.2.3"
 ext.protobufVersion = "3.9.1"
 ext.ballerinaTomlParserVersion = project.ballerinaTomlParserVersion
+ext.stdlibCryptoVersion = project.stdlibCryptoVersion
+ext.stdlibLogVersion = project.stdlibLogVersion
 
 allprojects {
     group = 'org.ballerinalang'
@@ -62,12 +64,41 @@ allprojects {
 
         maven {
             url = 'https://maven.pkg.github.com/ballerina-platform/module-ballerinax-nats'
+            credentials {
+                username System.getenv("packageUser")
+                password System.getenv("packagePAT")
+            }
+        }
+
+        maven {
+            url "https://maven.pkg.github.com/ballerina-platform/module-ballerina-log"
+            credentials {
+                username System.getenv("packageUser")
+                password System.getenv("packagePAT")
+            }
+        }
+
+        maven {
+            url "https://maven.pkg.github.com/ballerina-platform/module-ballerina-crypto"
+            credentials {
+                username System.getenv("packageUser")
+                password System.getenv("packagePAT")
+            }
         }
     }
 }
 
 subprojects {
     apply plugin: 'java'
+
+    configurations {
+        ballerinaStdLibs
+    }
+    dependencies {
+        /* Standard libraries */
+        ballerinaStdLibs "org.ballerinalang:log-ballerina:${stdlibLogVersion}"
+        ballerinaStdLibs "org.ballerinalang:crypto-ballerina:${stdlibCryptoVersion}"
+    }
 
     release {
         // Disable check snapshots temporarily
