--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ group=org.ballerinalang
 version=1.0.0-SNAPSHOT
 ballerinaLangVersion=2.0.0-Preview4-SNAPSHOT
 ballerinaTomlParserVersion=1.2.2
+stdlibCryptoVersion=0.7.0-SNAPSHOT
+stdlibLogVersion=1.0.0-SNAPSHOT
