--- a/nats-ballerina/Ballerina.toml
+++ b/nats-ballerina/Ballerina.toml
@@ -2,6 +2,10 @@
 org-name = "ballerinax"
 version = "@toml.version@"
 
+[dependencies]
+"ballerina/crypto" = "@stdlib.crypto.version@"
+"ballerina/log" = "@stdlib.log.version@"
+
 [platform]
 target = "java8"
 
